# zeroApi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  ci.yml
scripts/: gen_icons.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  curl.rs  db.rs  error.rs  http.rs  lib.rs  main.rs  models.rs
src/components/: ErrorBoundary.tsx  Logo.tsx
src/components/CodeEditor/: CodeEditor.tsx
src/components/KeyValueEditor/: KeyValueEditor.tsx
src/components/Layout/: Layout.tsx  Sidebar.tsx  Topbar.tsx
src/components/RequestPanel/: AuthEditor.tsx  BodyEditor.tsx  RequestPanel.tsx
src/components/ResponsePanel/: ResponsePanel.tsx
src/components/Sidebar/: CollectionDialog.tsx  EnvironmentDialog.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx
src/lib/: formatter.ts  highlight.ts  nanoid.ts  tauri.ts  utils.ts
src/pages/: CollectionPage.tsx  HomePage.tsx  ImportPage.tsx  SettingsPage.tsx
src/store/: dataStore.ts  requestStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts  vkbeautify.d.ts
