[package]
name = "zeroapi"
version = "1.0.0"
description = "ZeroApi - 零登录 零云端 零 CORS 的 API 调试工具"
authors = ["ZeroApi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zeroapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-updater = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-process = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "cookies", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
urlencoding = "2.1"
regex = "1.11"
base64 = "0.22"
once_cell = "1.20"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = 1

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
